[package]
name = "unicode-blocks"
version = "0.1.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/unicode-blocks"
homepage = "https://magiclen.org/unicode-blocks"
keywords = ["unicode", "blocks", "character", "cjk"]
categories = ["no-std", "text-processing"]
description = "This crate contains a list of all unicode blocks and provides some functions to search across them."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/unicode-blocks"
branch = "master"

[dependencies]
